# email_reply_parser

./: Cargo.toml  README.md
src/: email_parser.rs  lib.rs
tests/: email_message_tests.rs
